kubernetes_servicemesh/03_routing-via-http-header/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: training
  name: frontend
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - headers:
            user:
              exact: bob
      route:
        - destination:
            host: frontend.training.svc.cluster.local
            subset: v1
    - route:
        - destination:
            host: frontend.training.svc.cluster.local
            subset: v2
